complete content for '1era preEntrega'

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,14 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+li {
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
